/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package vista;

import controle.ContatoDAO;
import modelo.Contato;
public class TesteAgenda {
 
public static void main(String args[]){

 TelaContato TC = new TelaContato();
    TC.setVisible(true);


 

 }
}